--- a/src/pages/odziez-szyta-na-miare/index.html
+++ b/src/pages/odziez-szyta-na-miare/index.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KJS | konserwacja i naprawa odzieży</title>
+    <title>KJS | odzież szyta na miarę</title>
     <link rel="icon" type="image/x-icon" href="../../img/favicon.png" />
 
-    <meta property="og:site_name" content="KJS | konserwacja i naprawa odzieży" />
+    <meta property="og:site_name" content="KJS | odzież szyta na miarę" />
     <meta property="og:url" content="bhpstrykowo.pl" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="KJS | konserwacja i naprawa odzieży" />
+    <meta property="og:title" content="KJS | odzież szyta na miarę" />
     <meta property="og:description" content="Oferujemy usługi krawieckie i szewskie. Prowadzimy usługi konserwacji i naprawy odzieży." />
     <meta property="og:image" content="../../img/meta-image.jpg" />
     <meta property="og:image:secure_url" content="../../img/meta-image.jpg" />
-    <meta name="twitter:text:title" content="KJS | konserwacja i naprawa odzieży" />
+    <meta name="twitter:text:title" content="KJS | odzież szyta na miarę" />
     <meta name="twitter:image" content="../../img/meta-image.jpg" />
     <meta name="description" content="Oferujemy usługi krawieckie i szewskie. Prowadzimy usługi konserwacji i naprawy odzieży." />
     <meta name="keywords" content="KJS, bhpstrykowo, bhp, odzież, robocza, ochronna, reklamowa, haft, nadruk, nadruki, rękawice, ostrzegawcza, tapicerki, szycie na miarę, bhpstrykowo, kjs, kjstrykowo, artykuły bhp" />
@@ -60,82 +60,38 @@
       <a href="/realizacje" class="text-decoration-underline mb-md-mega">&lt; Powrót do realizacji</a>
 
       <div class="text-content pt-md-mega pt-kilo">
-        <h2 class="pb-deca pb-md-kilo">Jak dbać o odzież roboczą/ochronną?</h2>
-        <img src="../../img/naprawa-hero.png" class="img-radius d-block mb-kilo" alt="Narzędzia krawieckie" />
+        <h2 class="pb-deca pb-md-kilo">Szycie odzieży</h2>
+        <img src="../../img/clean/koszule.jpg" class="img-radius d-block mb-kilo" alt="Koszule w kratę szyte na miarę" />
         <p class="pb-deca">
-          Zakup ubrań wysokiej jakości, wykonanych z dobrej jakości materiału
-          jednak pierwszym krokiem w celu zachowania jej jak najdłuższej
-          trwałości. Równie ważne jednak jest jej prawidłowe użytkowanie oraz
-          przechowywanie.
+          Realizujemy zlecenie odzieży szycia na miarę. Szyjemy:
         </p>
-        <h3 class="pb-deci">Przechowywanie odzieży roboczej</h3>
+        <ul class="pb-deca">
+          <li>kurtki,</li>
+          <li>bluzy,</li>
+          <li>t-shirty,</li>
+          <li>polo,</li>
+          <li>spodnie – sportowe, robocze, ochronne oraz usztywniane,</li>
+          <li>kombinezony – sportowe, robocze, specjalistyczne (spawalnicze, ochronne),</li>
+          <li>kamizelki i bezrękawniki – ocieplane, pikowane, ostrzegawcze, odblaskowe,</li>
+          <li>czapki – z daszkiem, ocieplane, kominiarki,</li>
+          <li>i wiele innych.</li>
+        </ul>
         <p class="pb-deca">
-          Odzież powinno się przechowywać w przeznaczonych do tego celu
-          metalowych szafkach pracowniczych, aby odseparować ją od wszelkich
-          potencjalnych zagrożeń, takich jak zanieczyszczenia, chemikalia,
-          szkodliwe i zakaźne substancje, a także od wysokiego natężenia
-          światła, wysokiej temperatury czy wilgotności. Szafki takie powinny
-          mieścić się w suchym, oddzielnym pomieszczeniu. Ubrania nie powinny
-          być przechowywane na słońcu, ponieważ mogą stracić swój kolor, ani w
-          wilgotnym pomieszczeniu, ponieważ może to spowodować utratę jej
-          właściwości.
+          <strong>Gramatura</strong> do wyboru – 100-350g/m2. <strong>Tkaniny</strong>, których używamy, są wykonane z najwyższej jakości materiałów. <strong>Materiał</strong> do wyboru – 100% bawełna, 65% bawełna – 35% poliester lub bawełna z dodatkiem wiskozy, kolor materiału również do wyboru.
         </p>
-        <h3 class="pb-deci">Przygotowanie odzieży do prania</h3>
-        <p class="pb-deca">
-          Przed włożeniem odzieży do pralki należy opróżnić kieszenie, a także
-          zapiąć wszystkie zamki oraz paski. Metalowe elementy mogłyby uszkodzić
-          odzież w trakcie prania. Następnie należy wywinąć odzież na lewą
-          stronę. Pojedyncze plamy i luźne zabrudzenia najlepiej jest usunąć
-          jeszcze przed upraniem odzieży za pomocą wilgotnej szmatki.
-        </p>
-        <h3 class="pb-deci">Pranie odzieży</h3>
-        <p class="pb-deci">
-          Odzież należy prać zgodnie z zaleceniami na metce. Temperaturę prania
-          należy dostosować do rodzaju materiału, jednakże większośc ubrań
-          dobrze dopiera się w temperaturze 40st (chyba, że wytyczne producenta
-          na metce zalecają inaczej).
-        </p>
+        <p class="pb-deca">Posiadamy szeroką ofertę <strong>krojów i wzorów</strong>. Nasza odzież jest wygodna i użytkowa – posiada <strong>kieszenie</strong> wewnętrzne i zewnętrzne, <strong>zapięcia</strong> na rzepy lub zamki, <strong>ocieplacz</strong> oraz technologie pozwalające na stałą <strong>wymianę powietrza</strong>.</p>
+        <p>Realizujemy również zlecenia na życzenie Klienta. Zapraszamy do kontaktu.</p>
+      </div>
 
-        <p class="pb-deci">
-          Bawełna może wytrzymać temperatury w zależności od typu materiału -
-          40˚C, 60˚C lub nawet 90˚C, włókna syntetyczne (np. wiskoza),
-          temperatury chłodne lub letnie - około 30˚C, a sztuczne włókna, takie
-          jak poliester lub poliamid można prać w cieplejszej wodzie (40-60˚C).
-        </p>
-        <p class="pb-deci">
-          Odzież należy prac bez dodatku środków zmiękczających, ponieważ mogą
-          one spowodować utracenie właściwości ubrania.
-        </p>
-
-        <p class="pb-deci">
-          Ubrania z nadrukiem można prac maksymalnie w temperaturze 40-50˚C.
-          Wyższa temperatura może spowodować odksztalcanje się nadruku.
-        </p>
+      <div class=" pt-md-mega pt-kilo text-center">
+        <img src="../../img/clean/1.jpeg" width="250" class="pt-centi pb-centi pl-centi pr-centi" alt="Bezrękawnik moro szyty na miarę" />
+        <img src="../../img/clean/2.jpeg" width="250" class="pt-centi pb-centi pl-centi pr-centi"  alt="Spodnie do pasa z kieszeniami na klapy szyte na miarę"/>
+        <img src="../../img/clean/3.jpeg" width="250" class="pt-centi pb-centi pl-centi pr-centi" alt="Spodnie ogrodniczki z kieszeniami na klapy szyte na miarę" />
+        <img src="../../img/clean/4.jpeg" width="250" class="pt-centi pb-centi pl-centi pr-centi" alt="Szalik polarowy z haftem" />
+        <img src="../../img/clean/5.jpeg" width="250" class="pt-centi pb-centi pl-centi pr-centi" alt="Bluza polarowa moro z kieszeniami na zamki" />
+        <img src="../../img/clean/6.jpeg" width="250" class="pt-centi pb-centi pl-centi pr-centi" alt="Koszulka polo z kieszenią na klapę i haftem z logo" />
       </div>
     </section>
-    <section class="container pt-md-kilo pt-hecto text-content-small">
-    <div class="row pt-md-mega pt-kilo">
-        <div class="col-12">
-          <div class="text-content">
-            <h2 class="pb-kilo">Usługa konserwacji i naprawy odzieży</h2>
-            <p class="pb-deca">
-              Rozpruty szew? Rozdarcie wymagające załatania? Odzież wymaga skrócenia, powiększenia, dopasowania?
-            </p>
-            <p class="pb-deca">
-              A może nie chcesz martwić się prawidłową ochroną oraz praniem odzieży w Twoim
-          zakładzie pracy? Skontaktuj się z nami, a zapewnimy Ci kompleksową
-          usługę <strong>konserwacji i naprawy odzieży</strong>. Zapewniamy czyszczenie
-          oraz dowóz odzieży na wskazany adres firmy.</p>
-            <a
-              class="btn btn-default mt-hecto"
-              href="/#kontakt"
-            >
-              <span class="pr-deci">Skontaktuj się z nami i wyceń ofertę</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      </section>
 
     <footer class="mt-md-peta mt-kilo">
       <div class="container">
