--- a/src/pages/podsufitek-namiotowy/index.html
+++ b/src/pages/podsufitek-namiotowy/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KJS | poszycia wielkogabarytowe, pokrycia stadionów</title>
+    <title>KJS | Podsufitek namiotowy</title>
     <link rel="icon" type="image/x-icon" href="../../img/favicon.png" />
 
-    <meta property="og:site_name" content="KJS | poszycia wielkogabarytowe, pokrycia stadionów" />
+    <meta property="og:site_name" content="KJS | Podsufitek namiotowy" />
     <meta property="og:url" content="bhpstrykowo.pl" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="KJS | poszycia wielkogabarytowe, pokrycia stadionów" />
+    <meta property="og:title" content="KJS | Podsufitek namiotowy" />
     <meta property="og:description" content="Oferujemy usługi krawieckie i szewskie. Nasze magazyny są przystosowane do wytwarzania poryw i pokryć wielkogabarytowych." />
     <meta property="og:image" content="../../img/meta-image.jpg" />
     <meta property="og:image:secure_url" content="../../img/meta-image.jpg" />
-    <meta name="twitter:text:title" content="KJS | poszycia wielkogabarytowe, pokrycia stadionów" />
+    <meta name="twitter:text:title" content="KJS | Podsufitek namiotowy" />
     <meta name="twitter:image" content="../../img/meta-image.jpg" />
     <meta name="description" content="Oferujemy usługi krawieckie i szewskie. Nasze magazyny są przystosowane do wytwarzania poryw i pokryć wielkogabarytowych." />
     <meta name="keywords" content="KJS, bhpstrykowo, bhp, odzież, robocza, ochronna, reklamowa, haft, nadruk, nadruki, rękawice, ostrzegawcza, tapicerki, szycie na miarę, bhpstrykowo, kjs, kjstrykowo, artykuły bhp" />
@@ -60,11 +60,10 @@
       <div class="row pt-md-mega pt-kilo">
         <div class="col-12">
           <div class="text-content">
-            <h2 class="pb-deca pb-md-kilo">Poszycia stadionów</h2>
+            <h2 class="pb-deca pb-md-kilo">Gala do namiotów imprezowych</h2>
             <p class="pb-deca">
-              Materiałowe <strong>poszycie / pokrowiec na stadion</strong> ochrania przed niesprzyjającymi warunkami atmosferycznymi. Pokrycie na trawnik konserwuje i pozwala na jego utrzymanie w najlepszej kondycji. Nasze zakłady krawieckie są przystosowane do wykonywania poszyć <strong>gabarytowych XXL</strong>. Mamy doświadczenie w pracy nad <strong>poszyciami na stadiony</strong>. Poszycia są trwałe, wykonane z dobrej jakości materiału, z gwarancją jakości i poprawek.
-            </p>
-            <p>Za nami realizacje dla marek takich jak Lech Poznań. Realizowaliśmy pokrycia stadionów, a także inne poszycia wielkogabarytowe: namioty, baseny, zbiorniki wodne.</p>
+              <strong>Podsufitek namiotowy</strong> do hali to połączenie elegancji i funkcjonalności. Biały materiał zasłania stelaż, co nadaje podniosły i wytworny charakter całej sali. Precyzyjnie wykonane, aksamitny materiał i dbałość o każdy detal tworzy atmosferę pełną klasy i wyrafinowania.</p>
+            <p>Zaufaj nam, abyśmy mogli uczynić Twoją <strong>galę namiotową</strong> niezapomnianą. Nasze <strong>sufitowe konstrukcje</strong> są nie tylko elementem dekoracyjnym, ale także wyrazem naszej pasji do krawiectwa. Dzięki nam, Twoje wydarzenie nabierze charakteru, a każdy detal <strong>podsufitki</strong> wypełni przestrzeń elegancją i prestiżem.</p>
             <a
               class="btn btn-default mt-hecto"
               href="/#kontakt"
@@ -75,10 +74,13 @@
         </div>
 
         <div class="offset-sm-2 col-sm-8 col-lg-5 pt-md-mega pt-kilo offset-lg-1">
-          <img src="../../img/clean/poszycie-1.jpeg" alt="Pokrywa ochronna na trawnik" />
+          <img src="../../img/clean/1-261.jpg" alt="Namiot imprezowy z podsifitkiem, gala do namiotów imprezowych" />
         </div>
         <div class="offset-sm-2 col-sm-8 col-lg-5 pt-md-mega pt-kilo offset-lg-1">
-          <img src="../../img/clean/poszycie-2.jpeg" alt="Pokrowiec na stadion"/>
+          <img src="../../img/clean/1-270.jpg" alt="Dekoracje materiałowe w namiocie imprezowym"/>
+        </div>
+        <div class="offset-sm-2 col-sm-8 col-lg-11 pt-md-mega pt-kilo offset-lg-1">
+          <img src="../../img/clean/1-260.jpg" alt="Namiot imprezowy z podsifitkiem, gala do namiotów imprezowych"/>
         </div>
       </div>
     </section>
