--- a/src/pages/realizacje/index.html
+++ b/src/pages/realizacje/index.html
@@ -57,7 +57,7 @@
       </div>
     </menu>
 
-    <section class="container pt-md-giga pt-kilo">
+    <section class="container pt-md-giga pt-kilo text-content-small">
       <div class="text-content">
         <h2 class="pb-deca pb-md-kilo">Nasze realizacje</h2>
         <p class="pb-deca">
@@ -78,18 +78,36 @@
       </div>
 
       <div class="row pt-md-giga pt-kilo">
-        <div class="col-12 offset-md-2 col-sm-6 col-md-4 pb-deci pb-sm-zero">
+        <div class="col-10 offset-1 offset-md-0 col-md-4 pb-deci">
+          <a href="/odziez-szyta-na-miare">
+            <img src="../../img/clean/koszule.jpg" alt="Koszule w kratę szyte na miarę" class="img-link" />
+            <h5 class="text-center pt-deci">
+              Szycie odzieży na miarę
+            </h5>
+          </a>
+        </div>
+
+        <div class="col-10 offset-1 offset-md-0 col-md-4 pb-deci">
+          <a href="/podsufitek-namiotowy">
+            <img src="../../img/clean/1-260.jpg" alt="Gala do namiotów imprezowych, podsufitek namiotowy" class="img-link" />
+            <h5 class="text-center pt-deci">
+              Podsufitek namiotowy do namiotów imprezowych
+            </h5>
+          </a>
+        </div>
+
+        <div class="col-10 offset-1 offset-md-0 col-md-4 pb-deci">
           <a href="/poszycia-stadionow">
-            <img src="../../img/poszycie-1.png" alt="Zdjęcie przedstawiające poszycie stadionu wykonane przez nas" class="img-radius" />
+            <img src="../../img/poszycie-1.png" alt="Poszycie stadionu, pokrowiec na stadion" class="img-link" />
             <h5 class="text-center pt-deci">
               Poszycia stadionów
             </h5>
           </a>
         </div>
 
-        <div class="col-12 col-sm-6 col-md-4">
+        <div class="col-10 offset-1 offset-md-0 col-md-4 pb-deci">
           <a href="/jak-dbac-o-odziez-ochronna">
-            <img src="../../img/konserwacja-1x1.png" alt="Zdjęcie przedstawiające narzędzia krawieckie" class="img-radius" />
+            <img src="../../img/konserwacja-1x1.png" alt="Narzędzia krawieckie" class="img-link" />
             <h5 class="text-center pt-deci">
               Konserwacja odzieży
             </h5>
