--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
       class="container d-flex justify-content-between align-items-center pt-deci flex-column flex-sm-row"
     >
       <div>
-        <a href="/">
+        <a href="/" class="d-flex align-items-center">
           <img src="./img/logo.png" width="100" alt="KJS - logo" />
         </a>
       </div>
